Actualiza y muestra el status de cada red.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,15 +26,13 @@
 
     <style name="ImageViewStyle">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">0dp</item>
-        <item name="android:layout_weight">2</item>
+        <item name="android:layout_height">64dp</item>
     </style>
 
     <style name="TextViewStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">16dp</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
     </style>
 
