--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/adcolony_cardview"
         style="@style/PortraitCardViewStyle"
         android:layout_margin="16dp"
         app:cardCornerRadius="4dp"
@@ -28,6 +29,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/admob_cardview"
         style="@style/PortraitCardViewStyle"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -49,6 +51,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/fbaudience_cardview"
         style="@style/PortraitCardViewStyle"
         android:layout_margin="16dp"
         app:cardCornerRadius="4dp"
