--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             <TextView
                 android:id="@+id/adcolony_textview"
                 style="@style/TextViewStyle"
-                tools:text="REGISTRADA" />
+                tools:text="REGISTRADA\nClic aquí para guardar el estado." />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -46,7 +46,7 @@
             <TextView
                 android:id="@+id/admob_textview"
                 style="@style/TextViewStyle"
-                tools:text="Último registro: 12/02/2019 12:33" />
+                tools:text="Último registro: 12/02/2019 12:33\nClic aquí para guardar el estado." />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -67,7 +67,7 @@
             <TextView
                 android:id="@+id/fbaudience_textview"
                 style="@style/TextViewStyle"
-                tools:text="Último registro: 12/02/2019 12:33" />
+                tools:text="Último registro: 12/02/2019 12:33\nClic aquí para guardar el estado." />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
