--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,14 +25,15 @@
     </style>
 
     <style name="ImageViewStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
     </style>
 
     <style name="TextViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:gravity">center</item>
     </style>
 
